# Keyframe-Animation

./: README.md  movie.anim
CanadianExperienceLib/: AnimChannelMachine.cpp  AnimChannelMachine.h  CMakeLists.txt  Drawable.h  MachineDrawable.cpp  MachineDrawable.h  PictureFactory.cpp  ViewEdit.cpp
MachineLib/: Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  CustomMachineFactory.cpp  CustomMachineFactory.h  Gear.cpp  Gear.h  Lever.cpp  Lever.h  MachineBase.cpp  MachineBase.h  MachineController.cpp  MachineController.h  MachineFactory.cpp  MachineFactory.h  Motor.cpp  Motor.h  OwenMachineFactory.cpp  OwenMachineFactory.h  Piston.cpp  Piston.h  Rod.cpp  Rod.h  RodNegotiator.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h  TranslationSink.cpp  TranslationSink.h  TranslationSource.cpp  TranslationSource.h
MachineTests/: CMakeLists.txt  NegotiationTest.cpp
